finish get authenticate user
