# controllers/authController.go
@@ -6,7 +6,13 @@ import (
 	"github.com/Fly-Away/go-stock/services"
 	"github.com/Fly-Away/go-stock/util"
 	"github.com/gofiber/fiber/v2"
+	"github.com/golang-jwt/jwt"
+	"time"
 )
+
+type Claims struct {
+	jwt.StandardClaims
+}
 
 // Register godoc
 // @Summary User register, make sure email and password is unique
@@ -61,10 +67,19 @@ func Login(c *fiber.Ctx) error {
 		return util.ErrorResponse(c, err.Error(), 1002)
 	}
 
-	user, err, errorCode := services.Login(userLoginRequest)
+	user, err, errorCode, generatedToken := services.Login(userLoginRequest)
 	if err != nil {
 		return util.ErrorResponse(c, err.Error(), errorCode)
 	}
+
+	cookie := fiber.Cookie{
+		Name:     "jwt",
+		Value:    *generatedToken,
+		Expires:  time.Now().Add(time.Hour * 24),
+		HTTPOnly: true,
+	}
+
+	c.Cookie(&cookie)
 
 	return c.JSON(models.SuccessResponseDto{
 		Success: true,
@@ -72,5 +87,31 @@ func Login(c *fiber.Ctx) error {
 		Data: fiber.Map{
 			"user": user,
 		},
+	})
+}
+
+// AuthenticateUser godoc
+// @Summary get User authentication, this will get the jwt cookie
+// @Description all field should filled
+// @Accept  json
+// @Produce  json
+// @Tags Auth
+// @Success 200 {object} models.SuccessResponseDto{}
+// @Failure 400 {object} HTTPError
+// @Failure 404 {object} HTTPError
+// @Failure 500 {object} HTTPError
+// @Router /api/v1/user [get]
+func AuthenticateUser(c *fiber.Ctx) error {
+	cookie := c.Cookies("jwt")
+
+	user, err, errorCode := services.AuthenticateUser(cookie)
+	if err != nil {
+		return util.UnAuthorizedResponse(c, err.Error()+". Not authenticated ", errorCode)
+	}
+
+	return c.JSON(models.SuccessResponseDto{
+		Success: true,
+		Message: "User is valid",
+		Data:    user,
 	})
 }
